@@ -1,3 +1,8 @@
+Fri Oct 12 00:48:42 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (main): locale is a constant pointer; free
+	  internal_locale instead (Debian bug #446302).
+
 Thu Oct 11 01:40:51 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (display): Free format_cmd on two more early return
